--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -1,3 +1,15 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@layer utilities {
+    .special-underline {
+        @apply bg-gradient-to-r from-yellow-200 to-yellow-200
+        bg-no-repeat [background-position:0_88%]
+        [background-size:100%_0.2em]
+        motion-safe:transition-all motion-safe:duration-200
+        hover:[background-size:100%_100%]
+        focus:[background-size:100%_100%];
+    }
+}
+.prose a { @apply special-underline }
