Fix active state on TopBar

--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -4,7 +4,7 @@
 
 @layer utilities {
     .special-underline {
-        @apply bg-gradient-to-r from-yellow-200 to-yellow-200
+        @apply bg-gradient-to-r from-yellow-200 to-yellow-200 px-1
         bg-no-repeat [background-position:0_88%]
         [background-size:100%_0.2em]
         motion-safe:transition-all motion-safe:duration-200
