fix: Setup new Navigation

--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -14,4 +14,30 @@
         focus:[background-size:100%_100%];
     }
 }
-.prose a { @apply special-underline }
+
+.prose a { @apply specialUnderlineAiku }
+
+.specialUnderlineAiku {
+    @apply bg-gradient-to-t from-emerald-300 to-emerald-200
+    focus:ring-0 focus:outline-none focus:border-none
+    bg-no-repeat [background-position:0%_100%]
+    [background-size:100%_0.2em]
+    motion-safe:transition-all motion-safe:duration-200
+    hover:[background-size:100%_100%]
+    focus:[background-size:100%_100%] px-1;
+}
+
+.qwezxc {
+    /* For debug element */
+    @apply border border-red-500 
+}
+
+.zxcqwe {
+    /* For debug element */
+    @apply border border-green-500 
+}
+
+.asdzxc {
+    /* For debug element */
+    @apply ring-2 ring-offset-2 ring-red-500 
+}
