--- a/resources/css/navigation.css
+++ b/resources/css/navigation.css
@@ -1,6 +1,6 @@
 /* Navigation: Aikuanisation */
 .navigationActiveAiku {
-    @apply bg-amber-200/20 sm:border-l-4 sm:border-amber-300 text-white transition-all duration-100 ease-in-out
+    @apply bg-indigo-200/20 sm:border-l-4 sm:border-indigo-300 text-white transition-all duration-100 ease-in-out
 }
 .navigationAiku {
     @apply hover:bg-gray-300/30 text-fuchsia-200/60 transition-all duration-100 ease-in-out
