--- a/resources/css/navigation.css
+++ b/resources/css/navigation.css
@@ -1,9 +1,9 @@
 /* Navigation: Aikuanisation */
 .navigationActiveAiku {
-    @apply bg-indigo-200/20 sm:border-l-4 sm:border-indigo-300 text-white transition-all duration-100 ease-in-out
+    @apply bg-indigo-200/20 sm:border-l-4 sm:border-indigo-100 text-white font-semibold transition-all duration-100 ease-in-out
 }
 .navigationAiku {
-    @apply hover:bg-gray-300/30 text-fuchsia-200/60 transition-all duration-100 ease-in-out
+    @apply hover:bg-gray-300/30 text-indigo-200 font-semibold transition-all duration-100 ease-in-out
 }
 .navigationSecondActiveAiku {
     @apply bg-indigo-50 sm:border-l-4 sm:border-indigo-500 text-indigo-600 transition-all duration-100 ease-in-out
