--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -48,3 +48,30 @@
 .shimmer {
     @apply relative before:absolute before:inset-0 before:-translate-x-full before:animate-shimmer before:bg-gradient-to-r before:from-transparent before:via-white/60 before:to-transparent isolate overflow-hidden shadow-xl shadow-black/5 before:border-y before:border-white/30
 }
+
+
+/* For Notification */
+.custom-style-notification {
+    @apply mt-2 bg-white rounded-md mr-3;
+
+    .notification-title {
+        @apply font-bold
+    }
+
+    .notification-content {
+        @apply text-sm
+    }
+
+    &.success {
+        @apply bg-lime-50 border-l-8 border border-lime-300 text-lime-600
+    }
+    &.warning {
+        @apply bg-yellow-50 border-l-8 border border-yellow-400  text-amber-600
+    }
+    &.info {
+        @apply bg-gray-100 border-l-8 border border-slate-500  text-slate-500
+    }
+    &.error {
+        @apply bg-red-400 border-l-8 border border-red-600 text-white
+    }
+}
