--- a/resources/css/transition.css
+++ b/resources/css/transition.css
@@ -9,6 +9,30 @@
     opacity: 0;
 }
 
+/* Transition name="headlessui" */
+.headlessui-enter-active {
+    transition: all 0.2s ease-out;
+}
+.headlessui-leave-active {
+    transition: all 0.15s cubic-bezier(1, 0.5, 0.8, 1);
+}
+.headlessui-enter-from {
+    transform: translateY(4px);
+    opacity: 0;
+}
+.headlessui-enter-to {
+    transform: translateY(0px);
+    opacity: 100;
+}
+.headlessui-leave-from {
+    transform: translateY(0px);
+    opacity: 100;
+}
+.headlessui-leave-to {
+    transform: translateY(4px);
+    opacity: 0;
+}
+
 /* Transition name="slide-to-right" */
 .slide-to-right-enter-active {
     transition: all 0.1s ease-out;
