--- a/resources/css/navigation.css
+++ b/resources/css/navigation.css
@@ -24,5 +24,5 @@
     @apply bg-indigo-500 w-5/6 absolute h-0.5 rounded-full bottom-0 left-[50%] translate-x-[-50%] mx-auto transition-all duration-200 ease-in-out
 }
 .bottomNavigation {
-    @apply bg-gray-400 w-0 group-hover:w-3/6 absolute h-0.5 rounded-full bottom-0 left-[50%] translate-x-[-50%] mx-auto transition-all duration-200 ease-in-out
+    @apply bg-indigo-300 w-0 group-hover:w-3/6 absolute h-0.5 rounded-full bottom-0 left-[50%] translate-x-[-50%] mx-auto transition-all duration-200 ease-in-out
 }
