--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -17,6 +17,16 @@
         hover:[background-size:100%_100%]
         focus:[background-size:100%_100%] px-1;
     }
+
+    .specialUnderlineSecondary {
+        @apply bg-gradient-to-t from-gray-300 to-gray-200
+        focus:ring-0 focus:outline-none focus:border-none
+        bg-no-repeat [background-position:0%_100%]
+        [background-size:100%_0.2em]
+        motion-safe:transition-all motion-safe:duration-200
+        hover:[background-size:100%_100%]
+        focus:[background-size:100%_100%] px-1;
+    }
     
     .specialBox {
         @apply bg-gradient-to-t from-indigo-600 to-indigo-400
