--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -7,7 +7,7 @@
 @tailwind utilities;
 
 @layer utilities {
-    .specialUnderline {
+    /* .specialUnderline {
         @apply bg-gradient-to-t from-yellow-300 to-yellow-200
         focus:ring-0 focus:outline-none focus:border-none
         bg-no-repeat [background-position:0%_100%]
@@ -38,10 +38,10 @@
         motion-safe:transition-all motion-safe:duration-100
         hover:[background-size:100%_100%]
         focus:[background-size:100%_100%] px-1;
-    }
+    } */
 }
 
-.prose a { @apply specialUnderline }
+/* .prose a { @apply specialUnderline } */
 
 
 
